[gd_scene load_steps=2 format=3 uid="uid://b00fb5ox2w4oh"]

[ext_resource type="Script" path="res://core/ui/car_picker.gd" id="1_0bts6"]

[node name="CarPicker" type="HBoxContainer"]
script = ExtResource("1_0bts6")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Selected car"

[node name="CarSelection" type="OptionButton" parent="."]
layout_mode = 2

[connection signal="item_selected" from="CarSelection" to="." method="_on_car_selection_item_selected"]
